# audio-inventory

./: .gitignore  README.md  pyproject.toml
src/audio_inventory/: __init__.py  __main__.py  cli.py  db.py  dedup.py  export.py  models.py  scanner.py
src/audio_inventory/web/: __init__.py  routes.py
src/audio_inventory/web/static/: app.js  style.css
src/audio_inventory/web/templates/: index.html
